follow up on review

--- a/src/main/config/config.properties
+++ b/src/main/config/config.properties
@@ -14,3 +14,5 @@ bitrepository.purger.certificate=client-certkey.pem
 bitrepository.purger.numberofasyncdeletes=8
 #Maximum number of seconds the purger is allowed to run before it is shutdown
 bitrepository.purger.maxruntime=36000
+#Message for audit trails in bitrepository
+bitrepository.purger.message=Deleting file as part of batch purge
